# audio-video-tools

./: .gitignore  720p4m.bat  CLAUDE.md  FileTools.pm  FileToolsTest.pl  Jenkinsfile  README.md  Trace.pm  VideoTools.pm  VideoTools.properties  album_art.pl  album_art.py  audio-video-tools  audio-video-tools.code-workspace  audio_list.pl  audio_recode.pl  blindify.py  build.sh  concat.py  crop.py  crop_ratio.py  crop_square.py  deploy.bat  deploy.sh  deshake.py  dirr.pl  encode.py  encode_mp3_128.bat  encodeoo.py  encoding_formats.pl  filespecs.py  filespecsoo.py  install.bat  media-tools  metadata.py  mux.py  poster.py  pylintrc  pyproject.toml  pytest.ini  (+24 more)
.github/workflows/: build.yml
audiotools/: audiofile.py
batch-files/: 1.5mbps-1280 nohw.bat  1.5mbps-1280.bat  1.5mpbs-960.bat  1080p 25fps x264 hw.bat  1080p 25fps x264 nohw.bat  1080p 25fps x265 hw.bat  1080p 25fps x265 nohw.bat  1080p 30fps x264 hw.bat  1080p 30fps x264 nohw.bat  1080p 30fps x265 hw.bat  1080p 30fps x265 nohw.bat  1080p 60fps x264 hw.bat  1080p 60fps x264 nohw.bat  1080p 60fps x265 hw.bat  1080p 60fps.bat  1080p rush.bat  1080p sliced.bat  1080p vertical.bat  1080p x264 50fps.bat  1080p x265 25fps.bat  1080p x265 30fps.bat  1080p x265 50fps.bat  1080p x265 60fps.bat  1080p.bat  1080pX265.bat  1080p_x265.bat  1mbps 960 nohw.bat  1mbps 960.bat  1mpbs-720.bat  2.5K 50fps x264 hw.bat  2.5K 50fps x264 nohw.bat  2.5K 60fps - x264.bat  2.5K GOPRO.bat  2mbps-1280.bat  300kpbs-480.bat  360p.bat  3mbps-1280.bat  4K DJI.bat  4mbps-1280 - no hw.bat  4mbps-1280.bat  (+101 more)
batch-files-audio/: aac 128.bat  album-art.bat  audio normalize.bat  audio-concat.bat  audio-copy.bat  audio-lib.bat  audio-link.bat  audio-list.bat  audio-refresh-collection.bat  audio-speed.bat  audio-update-hash.bat  mp3 192.bat
batch-files-images/: datefixer.bat  datemover.bat  datesetter.bat  geotagger.bat  poster.bat  renamer.bat  scale.bat  scale.sh  shuffle.bat
cli/: __init__.py  encode.py  shuffle.py
filters/: fader.py  filter.py  filters.py
it/: it-00-media-specs.sh  it-00-metadata.sh  it-01-image-blinds.sh  it-01-image-crop.sh  it-01-image-scale.sh  it-02-video-crop.sh  it-02-video-cut.sh  it-02-video-volume.sh  it-03-image-panorama.sh  it-03-image-zoom.sh  it-03-video-encode.sh  it-03-video-reverse.sh  it-03-video-speed.sh  it-04-video-deshake.sh  it-04-video-slideshow.sh  it-blinds.sh  it-crop-image.sh  it-crop-video-1.sh  it-cut-video.sh  it-deshake.sh  it-encode-video.sh  it-media-specs.sh  it-metadata.sh  it-scale-1.sh  it-slideshow-1.sh  it-speed.sh  it.sh  lib-it.sh
mediatools/: __init__.py  album_art.py  audio_lib.py  audio_list.py  audio_normalize.py  audioconcat.py  audiofile.py  audiolib.properties  audiospeed.py  audiosplit.py  avfile.py  blindify.py  concat.py  config.py  creator.py  crop.py  crop_ratio.py  cut.py  datefixer.py  deshake.py  encode.py  encodeauto.py  encoder.py  exceptions.py  file.py  filespecs.py  fileutils.py  filters.py  fix_mp3_meta.py  image2video.py  imagefile.py  linker.py  log.py  media-tools.properties  media_config.py  mediafile.py  metadata.py  mux.py  options.py  poster.py  (+15 more)
mediatools/filters/: filter.py
test/: dry-run-cmds.txt  pano.sh
test-pytest/: test_resolution.py
test-unittest/: __init__.py
test2/: __init__.py  test_resolution.py
testpytest/: test_audio.py  test_audio_tags.py  test_concat.py  test_encode.py  test_file.py  test_filespecs.py  test_filters.py  test_image.py  test_mux.py  test_panorama.py  test_poster.py  test_resolution.py  test_reverse.py  test_slideshow.py  test_stack.py  test_utilities.py  test_video.py  test_zoom.py
tests/: test_audio.py  test_audio_lib.py  test_audio_normalize.py  test_audio_tags.py  test_audiosplit.py  test_concat.py  test_cut.py  test_encode.py  test_file.py  test_filespecs.py  test_filters.py  test_fix_mp3_meta.py  test_image.py  test_mux.py  test_panorama.py  test_poster.py  test_resolution.py  test_reverse.py  test_slideshow.py  test_speed.py  test_stack.py  test_utilities.py  test_video.py  test_zoom.py
tests_windows/: coverage_windows.xml
testunittest/: __init__.py  test_resolution.py
utilities/: __init__.py  file.py
videotools/: filetools.py  videofile.py
