[project]
name = "audio-video-tools"
version = "0.7"
description = "A collection of utility scripts to manipulate media files (audio, video, image)"
authors = [
    {name = "Olivier Korach", email = "olivier.korach@gmail.com"},
]
maintainers = [
    {name = "Olivier Korach", email = "olivier.korach@gmail.com"},
]

license = "LGPL-3.0-only"
license-files = ["LICEN[CS]E*"]

keywords = ["ffmpeg", "video", "audio", "image", "media", "transcode", "stabilize", "tools"]

readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "argparse",
    "datetime",
    "mp3_tagger",
    "ffmpeg-python",
    "ExifRead",
    "pyexiftool",
    "jprops",
    "librosa",
    "pywin32",
    "musicbrainzngs",
    "mutagen",
    "Pillow>=10.3.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video :: Conversion",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/okorach/audio-video-tools"
Repository = "https://github.com/okorach/audio-video-tools.git"
Issues = "https://github.com/okorach/audio-video-tools/issues"
Documentation = "https://github.com/okorach/audio-video-tools/README.md"

[project.scripts]
video-encode     = "mediatools.encode:main"
media-specs      = "mediatools.filespecs:main"
video-speed      = "mediatools.speed:main"
image-poster     = "mediatools.poster:main"
image-blinds     = "mediatools.blindify:main"
image-shake      = "mediatools.shake:main"
image-scale      = "mediatools.rescale:main"
image-stack      = "mediatools.stack:main"
video-mux        = "mediatools.mux:main"
video-concat     = "mediatools.concat:main"
media-crop       = "mediatools.crop:main"
media-volume     = "mediatools.volume:main"
media-cut        = "mediatools.cut:main"
video-stabilize  = "mediatools.stabilize:main"
video-deshake    = "mediatools.deshake:main"
audio-album-art  = "mediatools.album_art:main"
image-to-video   = "mediatools.image2video:main"
video-slideshow  = "mediatools.slideshow:main"
video-reverse    = "mediatools.reverse:main"
video-metadata   = "mediatools.metadata:main"
audio-lib        = "mediatools.audio_lib:main"
audio-list       = "mediatools.audio_list:main"
linker           = "mediatools.linker:main"
renamer          = "mediatools.renamer:main"
datefixer        = "mediatools.datefixer:main"
shuffle          = "cli.shuffle:main"
encodeauto       = "mediatools.encodeauto:main"
encode           = "cli.encode:main"
audio-split      = "mediatools.audiosplit:main"
audio-concat     = "mediatools.audioconcat:main"
audio-speed      = "mediatools.audiospeed:main"
video-enhance    = "mediatools.video_enhance:main"
fix-mp3-meta     = "mediatools.fix_mp3_meta:main"
audio-normalize  = "mediatools.audio_normalize:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "wheel", "twine"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "mediatools"},
    {include = "cli"},
    {include = "filters"},
    {include = "utilities"},
]
include = [
    {path = "mediatools/LICENSE"},
    {path = "mediatools/media-tools.properties"},
    {path = "mediatools/black.jpg"},
    {path = "mediatools/white.jpg"},
    {path = "mediatools/video-720p.mp4"},
]

[dependency-groups]
test = [
    "pytest (>=8.0)",
    "coverage (>=7.0)",
]
lint = [
    "ruff (>=0.5.0)",
    "pylint (>=3.0)",
    "flake8 (>=7.0)",
    "bandit (>=1.7)",
    "black (>=24.0)",
]
build = [
    "poetry (>=2.0)",
    "twine (>=5.0)",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "build"},
]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["."]
reportMissingModuleSource = false

[tool.ruff]
line-length = 150
target-version = "py310"
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "D403",
    "D415",
    "D400",
    "FBT002",
    "FBT001",
    "PTH123",  # `open()` should be replaced by `Path.open()`
    "ISC001",
    "COM812",  # Missing trailing comma
    "D211",
    "D213",
    "D203",
    "D401",
    "ERA001",
    "S101",
    "I001",
    "TRY003",
    "EM102",
    "C901",    # Complexity rule, better covered by SonarQube
    "ANN401",  # Disallow Any type annotation
    "TD001",   # Disallow TODO/FIXME comments
    "EM101",   # Don't use string literals in exceptions raise
    "UP004",   # Useless inheritance to object
    "D209",    # Multiline docstrings quotes on separate line
    "D205",    # 1 blank line between docstring title and body
    # Docstrings — large pre-existing debt, to be addressed incrementally
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D202", "D404", "D413",
    # Type annotations — large pre-existing debt, to be addressed incrementally
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204",
    # Magic values — pervasive in FFmpeg parameter code
    "PLR2004",
    # Private member access — intentional pattern in this codebase
    "SLF001",
    # print() — intentional in CLI tools
    "T201",
    # Unused loop variables — intentional (_) patterns
    "RUF059",
    # pathlib migration — large refactor, separate concern
    "PTH100", "PTH103", "PTH104", "PTH107", "PTH108", "PTH109", "PTH110",
    "PTH111", "PTH112", "PTH113", "PTH114", "PTH115", "PTH116", "PTH118",
    "PTH119", "PTH120", "PTH122", "PTH123", "PTH204", "PTH206", "PTH208",
    "PTH211",
    # pytest assertion style — tests excluded from SonarCloud
    "PT015", "PT017", "PT018", "PT006",
    # assert False in tests — tests excluded from SonarCloud
    "B011",
    # Broad exception catching — intentional defensive code
    "BLE001",
    # Unused arguments — interface/abstract method signatures
    "ARG001", "ARG002",
    # Unicode chars in comments/docstrings — intentional (French, special chars)
    "RUF001", "RUF002", "RUF003",
    # try/return placement — style preference
    "TRY300", "TRY301", "TRY201",
    # Complexity metrics — covered by SonarQube
    "PLR0912", "PLR0913", "PLR0915",
    # global variable usage — intentional
    "PLW0603", "PLW0602",
    # contextlib.suppress — style preference
    "SIM105",
    # Conditional imports not at module top — intentional
    "PLC0415", "E402",
    # Implicit namespace package — by design
    "INP001",
    # try/except in loop — sometimes necessary
    "PERF203",
    # TODO comment metadata requirements
    "TD002", "TD003", "TD004", "FIX002", "FIX004",
    # Timezone-naive datetime — pre-existing pattern, separate concern
    "DTZ001", "DTZ005", "DTZ006", "DTZ007",
    # Loop variable overwrite in comprehension — intentional patterns
    "PLW2901",
    # Pseudo-random for non-cryptographic media use (file shuffling, effects)
    "S311",
    # Intentional __func__ naming pattern for module-level private functions
    "N807",
    # Uppercase constants defined inside functions
    "N806",
    # Boolean positional values in function calls — common in this codebase
    "FBT003",
    # subprocess call checking — FFmpeg invocation with known commands
    "S603", "PLW1510",
    # md5 used for file identity checking, not cryptography
    "S324",
    # Temp dir usage — intentional in tests
    "S108",
    # Ternary operators — complex conditions can be more readable as if/else
    "SIM108",
]

exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]
